Updates to exam titles

--- a/explanations-reading.html
+++ b/explanations-reading.html
@@ -29,10 +29,10 @@
                         <a class="nav-link" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="full-practice_1.html">Full Practice Exam 1</a>
+                        <a class="nav-link" href="full-practice_1.html">Exam 1</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="full-practice_2.html">Full Practice Exam 2</a>
+                        <a class="nav-link" href="full-practice_2.html">Exam 2</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="practice-math.html">Math Practice</a>
@@ -152,8 +152,8 @@
                             <h5 class="card-title">Ready to Practice?</h5>
                             <p class="card-text">Apply these strategies with our practice questions.</p>
                             <a href="practice-reading.html" class="btn btn-success me-2">Reading Practice</a>
-                            <a href="full-practice_1.html" class="btn btn-primary me-2">Full Exam 1</a>
-                            <a href="full-practice_2.html" class="btn btn-primary">Full Exam 2</a>
+                            <a href="full-practice_1.html" class="btn btn-primary me-2">Exam 1</a>
+                            <a href="full-practice_2.html" class="btn btn-primary">Exam 2</a>
                         </div>
                     </div>
 
