--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
                         <a class="nav-link active" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="full-practice_1.html">Full Practice Exam 1</a>
+                        <a class="nav-link" href="full-practice_1.html">Exam 1</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="full-practice_2.html">Full Practice Exam 2</a>
+                        <a class="nav-link" href="full-practice_2.html">Exam 2</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="practice-math.html">Math Practice</a>
@@ -65,11 +65,11 @@
                     Practice math and reading comprehension questions at your own pace.</p>
 
                 <div class="d-flex gap-3 justify-content-center flex-wrap">
-                    <a href="full-practice_1.html" class="btn btn-primary btn-lg">Full Practice Exam 1</a>
+                    <a href="full-practice_1.html" class="btn btn-primary btn-lg">Exam 1</a>
 
                     <a href="practice-math.html" class="btn btn-success btn-lg">Math Practice</a>
                     <a href="practice-reading.html" class="btn btn-success btn-lg">Reading Practice</a>
-                    <a href="full-practice_2.html" class="btn btn-primary btn-lg">Full Practice Exam 2</a>
+                    <a href="full-practice_2.html" class="btn btn-primary btn-lg">Exam 2</a>
                 </div>
             </div>
 
@@ -78,7 +78,7 @@
                 <div class="col-md-4 mb-4">
                     <div class="card h-100">
                         <div class="card-body">
-                            <h5 class="card-title">Full Practice Exams</h5>
+                            <h5 class="card-title">Exams</h5>
                             <p class="card-text">Take complete practice exams that simulate an electrical apprenticeship
                                 aptitude test
                                 experience. Test your knowledge across both math and reading sections.</p>
@@ -158,7 +158,7 @@
                         <div class="card-body">
                             <h3 class="card-title">How to Use This Site</h3>
                             <ol>
-                                <li><strong>Start with a full practice exam:</strong> Take Full Practice Exam 1 and
+                                <li><strong>Start with a full practice exam:</strong> Take Exam 1 and
                                     mimic the test environment. Set a timer for 45 minutes for the math portion, then
                                     take a 10-minute break, followed by 50 minutes for the reading portion.</li>
                                 <li><strong>Review and study:</strong> After completing the exam, review the
@@ -166,7 +166,7 @@
                                     pages.</li>
                                 <li><strong>Practice sections separately:</strong> Use the Math Practice and Reading
                                     Practice pages to focus on specific areas where you need improvement.</li>
-                                <li><strong>Take the second exam:</strong> Complete Full Practice Exam 2 to measure your
+                                <li><strong>Take the second exam:</strong> Complete Exam 2 to measure your
                                     progress and further prepare for test day.</li>
                                 <li><strong>Get extra practice and explanations:</strong> Use an LLM like Chat GPT or
                                     Claude to get extra practice questions and explanations.</li>
