--- a/practice-math.html
+++ b/practice-math.html
@@ -29,10 +29,10 @@
                         <a class="nav-link" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="full-practice_1.html">Full Practice Exam 1</a>
+                        <a class="nav-link" href="full-practice_1.html">Exam 1</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="full-practice_2.html">Full Practice Exam 2</a>
+                        <a class="nav-link" href="full-practice_2.html">Exam 2</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link active" href="practice-math.html">Math Practice</a>
@@ -119,8 +119,8 @@
                     <div class="d-flex justify-content-between mb-4">
                         <a href="index.html" class="btn btn-outline-secondary">Back to Home</a>
                         <div>
-                            <a href="full-practice_1.html" class="btn btn-primary me-2">Full Exam 1</a>
-                            <a href="full-practice_2.html" class="btn btn-primary me-2">Full Exam 2</a>
+                            <a href="full-practice_1.html" class="btn btn-primary me-2">Exam 1</a>
+                            <a href="full-practice_2.html" class="btn btn-primary me-2">Exam 2</a>
                             <a href="practice-reading.html" class="btn btn-success">Practice Reading</a>
                         </div>
                     </div>
