Checked through 25 in math practice

--- a/practice-math.html
+++ b/practice-math.html
@@ -690,10 +690,10 @@
                         </div>
                         <div class="card-body">
                             <p class="mb-4">For each equation, determine which statement about the relationship between
-                                the variables is true.</p>
+                                the variables is true. Graphing these problems is usually helpful. </p>
 
                             <!-- Question 21: 2D Graphing -->
-                            <div class="question mb-4" data-question="m21" data-correct="B">
+                            <div class="question mb-4" data-question="m21" data-correct="A">
                                 <p class="fw-bold">21. Given the equation</p>
                                 <p class="mb-2" style="font-size: 1.5em; text-align: center;">\[4m = n + 8\]</p>
                                 <p class="mb-2">which of the following statements is true?</p>
@@ -705,7 +705,7 @@
                                 <div class="form-check">
                                     <input class="form-check-input" type="radio" name="m21" id="m21b" value="B">
                                     <label class="form-check-label" for="m21b">B. If \(m\) is less than 0, then \(n\) is
-                                        less than 8</label>
+                                        greater than 8</label>
                                 </div>
                                 <div class="form-check">
                                     <input class="form-check-input" type="radio" name="m21" id="m21c" value="C">
@@ -745,7 +745,7 @@
                                 <div class="form-check">
                                     <input class="form-check-input" type="radio" name="m22" id="m22d" value="D">
                                     <label class="form-check-label" for="m22d">D. If \(q\) is less than 3, then \(p\) is
-                                        negative</label>
+                                        positive</label>
                                 </div>
                                 <button class="btn btn-sm btn-primary mt-2 check-answer-btn" data-question="m22">Check
                                     Answer</button>
@@ -1888,14 +1888,14 @@
             m16: "Given \\(y = \\frac{2z - x}{z} + 3\\). We can rewrite this as \\(y = \\frac{2z}{z} - \\frac{x}{z} + 3 = 2 - \\frac{x}{z} + 3 = 5 - \\frac{x}{z}\\). Since \\(x\\) is constant, as \\(z\\) increases, \\(\\frac{x}{z}\\) decreases. Therefore, \\(-\\frac{x}{z}\\) increases, meaning \\(y\\) increases. D is true, but the question is asking about z increasing, and D assumes it is decreasing.",
             m17: "Given \\(b = \\frac{(a + 2)(c - 1)}{\\sqrt{c}}\\). Since \\(c\\) is constant, both \\((c - 1)\\) and \\(\\sqrt{c}\\) are constant. As \\(a\\) increases, \\((a + 2)\\) increases, so the numerator increases while the denominator stays constant. Therefore, \\(b\\) increases as \\(a\\) increases.",
             m18: "Given \\(d = \\frac{3e + f}{e - 2}\\). Since \\(f\\) is constant, as \\(e\\) increases both the numerator and denominator increase. For large values of \\(e\\), \\(d\\) approaches \\(\\frac{3e}{e} = 3\\). As \\(e\\) increases from a small value, \\(d\\) increases toward this limit. Plug some numbers in for e to see this pattern.",
-            m19: "Given \\(h = \\frac{\\sqrt{k}}{k + j}\\). Since \\(j\\) is constant, as \\(k\\) increases, \\(\\sqrt{k}\\) increases but \\(k + j\\) increases faster. The ratio \\(\\frac{\\sqrt{k}}{k} = \\frac{1}{\\sqrt{k}}\\) decreases as \\(k\\) increases (since \\(\\sqrt{k}\\) grows slower than \\(k\\)), so \\(h\\) decreases. Video: [Link to Khan Academy video]",
-            m20: "Given \\(r = \\frac{5s - t}{2s}\\). We can rewrite this as \\(r = \\frac{5s}{2s} - \\frac{t}{2s} = \\frac{5}{2} - \\frac{t}{2s}\\). Since \\(t\\) is constant, as \\(s\\) increases, \\(\\frac{t}{2s}\\) decreases. Therefore, \\(-\\frac{t}{2s}\\) increases, meaning \\(r\\) increases. Video: [Link to Khan Academy video]",
+            m19: "Given \\(h = \\frac{\\sqrt{k}}{k + j}\\). Since \\(j\\) is constant, as \\(k\\) increases, \\(\\sqrt{k}\\) increases but \\(k + j\\) increases faster. The ratio \\(\\frac{\\sqrt{k}}{k} = \\frac{1}{\\sqrt{k}}\\) decreases as \\(k\\) increases (since \\(\\sqrt{k}\\) grows slower than \\(k\\)), so \\(h\\) decreases.",
+            m20: "Given \\(r = \\frac{5s - t}{2s}\\). We can rewrite this as \\(r = \\frac{5s}{2s} - \\frac{t}{2s} = \\frac{5}{2} - \\frac{t}{2s}\\). Since \\(t\\) is constant, as \\(s\\) increases, \\(\\frac{t}{2s}\\) decreases. Therefore, \\(-\\frac{t}{2s}\\) increases, meaning \\(r\\) increases.",
             // 2D Graphing and Inequalities
-            m21: "Given \\(4m = n + 8\\), we can rewrite as \\(n = 4m - 8\\). If \\(m < 0\\), then \\(4m < 0\\), so \\(4m - 8 < -8\\), meaning \\(n < -8\\). Since \\(n < -8\\), it is also true that \\(n < 8\\) (though this is a weaker bound). Statement B is correct. Video: [Link to Khan Academy video on linear equations]",
-            m22: "Given \\(3p = 2q - 6\\), we can rewrite as \\(2q = 3p + 6\\), so \\(q = \\frac{3p + 6}{2}\\). If \\(q > 6\\), then \\(\\frac{3p + 6}{2} > 6\\), so \\(3p + 6 > 12\\), meaning \\(3p > 6\\), so \\(p > 2\\). Since \\(p > 2\\), \\(p\\) is positive. Statement C is correct. Video: [Link to Khan Academy video on linear equations]",
-            m23: "Given \\(5r = s + 10\\), we can rewrite as \\(s = 5r - 10\\). If \\(r > 3\\), then \\(5r > 15\\), so \\(5r - 10 > 5\\), meaning \\(s > 5\\). Statement A is correct. Video: [Link to Khan Academy video on linear equations]",
-            m24: "Given \\(2u = v - 4\\), we can rewrite as \\(v = 2u + 4\\). If \\(v < 0\\), then \\(2u + 4 < 0\\), so \\(2u < -4\\), meaning \\(u < -2\\). Statement D is correct. Video: [Link to Khan Academy video on linear equations]",
-            m25: "Given \\(6w = 3x + 12\\), we can rewrite as \\(3x = 6w - 12\\), so \\(x = 2w - 4\\). If \\(w < 1\\), then \\(2w < 2\\), so \\(2w - 4 < -2\\), meaning \\(x < -2\\). Statement B is correct. Video: [Link to Khan Academy video on linear equations]"
+            m21: "Given \\(4m = n + 8\\), we can rewrite as \\(n = 4m - 8\\). If \\(m > 3\\), then \\(4m > 12\\), so \\(4m - 8 > 4\\), meaning \\(n > 4\\). Therefore, \\(n\\) is positive. Statement A is correct.",
+            m22: "Given \\(3p = 2q - 6\\), we can rewrite as \\(p = \\frac{2q - 6}{3}\\). If \\(q > 6\\), then \\(2q - 6 > 6\\), so \\(p = \\frac{2q - 6}{3} > 2\\), meaning \\(p\\) is positive. Statement C is correct.",
+            m23: "Given \\(5r = s + 10\\), we can rewrite as \\(s = 5r - 10\\). If \\(r > 3\\), then \\(5r > 15\\), so \\(5r - 10 > 5\\), meaning \\(s > 5\\). Statement A is correct.  ",
+            m24: "Given \\(2u = v - 4\\), we can rewrite as \\(v = 2u + 4\\). If \\(v < 0\\), then \\(2u + 4 < 0\\), so \\(2u < -4\\), meaning \\(u < -2\\). Statement D is correct.  ",
+            m25: "Given \\(6w = 3x + 12\\), we can rewrite as \\(3x = 6w - 12\\), so \\(x = 2w - 4\\). If \\(w < 1\\), then \\(2w < 2\\), so \\(2w - 4 < -2\\), meaning \\(x < -2\\). Statement B is correct.  "
         };
 
         document.addEventListener('DOMContentLoaded', function () {
