factoring explanations in math practice

--- a/practice-math.html
+++ b/practice-math.html
@@ -902,7 +902,7 @@
                                 <div class="answer-feedback mt-3" id="feedback-m27" style="display: none;"></div>
                             </div>
 
-                            <!-- Question 21: Expanding -->
+                            <!-- Question 28: Expanding -->
                             <div class="question mb-4" data-question="m28" data-correct="B">
                                 <p class="fw-bold"> 28. Expand:</p>
                                 <p class="mb-2" style="font-size: 1.8em; text-align: center;">\[(5h - 3k)(h + 4k)\]</p>
@@ -927,7 +927,7 @@
                                 <div class="answer-feedback mt-3" id="feedback-m28" style="display: none;"></div>
                             </div>
 
-                            <!-- Question 22: Expanding -->
+                            <!-- Question 29: Expanding -->
                             <div class="question mb-4" data-question="m29" data-correct="B">
                                 <p class="fw-bold"> 29. Expand:</p>
                                 <p class="mb-2" style="font-size: 1.8em; text-align: center;">\[(6m - 2n)(2m + 3n)\]</p>
@@ -952,7 +952,7 @@
                                 <div class="answer-feedback mt-3" id="feedback-m29" style="display: none;"></div>
                             </div>
 
-                            <!-- Question 23: Factoring -->
+                            <!-- Question 30: Factoring -->
                             <div class="question mb-4" data-question="m30" data-correct="D">
                                 <p class="fw-bold"> 30. Factor:</p>
                                 <p class="mb-2" style="font-size: 1.8em; text-align: center;">\[7r^2 - 11rs - 6s^2\]</p>
@@ -977,7 +977,7 @@
                                 <div class="answer-feedback mt-3" id="feedback-m30" style="display: none;"></div>
                             </div>
 
-                            <!-- Question 24: Expanding -->
+                            <!-- Question 31: Expanding -->
                             <div class="question mb-4" data-question="m31" data-correct="A">
                                 <p class="fw-bold"> 31. Expand:</p>
                                 <p class="mb-2" style="font-size: 1.8em; text-align: center;">\[(3t - 4u)(2t + 5u)\]</p>
@@ -1002,7 +1002,7 @@
                                 <div class="answer-feedback mt-3" id="feedback-m31" style="display: none;"></div>
                             </div>
 
-                            <!-- Question 25: Factoring -->
+                            <!-- Question 32: Factoring -->
                             <div class="question mb-4" data-question="m32" data-correct="B">
                                 <p class="fw-bold"> 32. Factor:</p>
                                 <p class="mb-2" style="font-size: 1.8em; text-align: center;">\[8v^2 - 14vw - 15w^2\]
@@ -1895,7 +1895,18 @@
             m22: "Given \\(3p = 2q - 6\\), we can rewrite as \\(p = \\frac{2q - 6}{3}\\). If \\(q > 6\\), then \\(2q - 6 > 6\\), so \\(p = \\frac{2q - 6}{3} > 2\\), meaning \\(p\\) is positive. Statement C is correct.",
             m23: "Given \\(5r = s + 10\\), we can rewrite as \\(s = 5r - 10\\). If \\(r > 3\\), then \\(5r > 15\\), so \\(5r - 10 > 5\\), meaning \\(s > 5\\). Statement A is correct.  ",
             m24: "Given \\(2u = v - 4\\), we can rewrite as \\(v = 2u + 4\\). If \\(v < 0\\), then \\(2u + 4 < 0\\), so \\(2u < -4\\), meaning \\(u < -2\\). Statement D is correct.  ",
-            m25: "Given \\(6w = 3x + 12\\), we can rewrite as \\(3x = 6w - 12\\), so \\(x = 2w - 4\\). If \\(w < 1\\), then \\(2w < 2\\), so \\(2w - 4 < -2\\), meaning \\(x < -2\\). Statement B is correct.  "
+            m25: "Given \\(6w = 3x + 12\\), we can rewrite as \\(3x = 6w - 12\\), so \\(x = 2w - 4\\). If \\(w < 1\\), then \\(2w < 2\\), so \\(2w - 4 < -2\\), meaning \\(x < -2\\). Statement B is correct.  ",
+            // Factoring
+            m26: "Using distribution (FOIL): \\(4g(g) + 4g(2n) - 5n(g) - 5n(2n) = 4g^2 + 8gn - 5gn - 10n^2\\). Combining like terms gives \\(4g^2 + 3gn - 10n^2\\). Statement C is correct.",
+            m27: "We look for two binomials that multiply to \\(5p^2 - 8pq - 4q^2\\). Expanding \\((5p + 2q)(p - 2q)\\) gives \\(5p^2 - 10pq + 2pq - 4q^2 = 5p^2 - 8pq - 4q^2\\). Statement A is correct.",
+            m28: "Using distribution: \\(5h(h) + 5h(4k) - 3k(h) - 3k(4k) = 5h^2 + 20hk - 3hk - 12k^2\\). Combining like terms gives \\(5h^2 + 17hk - 12k^2\\). Statement B is correct.",
+            m29: "Using FOIL: \\(6m(2m) + 6m(3n) - 2n(2m) - 2n(3n) = 12m^2 + 18mn - 4mn - 6n^2\\). Combining like terms gives \\(12m^2 + 14mn - 6n^2\\). Statement B is correct.",
+            m30: "We factor \\(7r^2 - 11rs - 6s^2\\) by finding binomials that expand to the original expression. Expanding \\((7r + 3s)(r - 2s)\\) gives \\(7r^2 - 14rs + 3rs - 6s^2 = 7r^2 - 11rs - 6s^2\\). Statement D is correct.",
+            m31: "Using distribution: \\(3t(2t) + 3t(5u) - 4u(2t) - 4u(5u) = 6t^2 + 15tu - 8tu - 20u^2\\). Combining like terms gives \\(6t^2 + 7tu - 20u^2\\). Statement A is correct.",
+            m32: "We factor \\(8v^2 - 14vw - 15w^2\\) by finding binomials whose expansion matches the expression. Expanding \\((4v + 3w)(2v - 5w)\\) gives \\(8v^2 - 20vw + 6vw - 15w^2 = 8v^2 - 14vw - 15w^2\\). Statement B is correct.",
+
+
+
         };
 
         document.addEventListener('DOMContentLoaded', function () {
