--- a/practice-math.html
+++ b/practice-math.html
@@ -1122,37 +1122,8 @@
                             <div class="question mb-4" data-question="m35" data-correct="C">
                                 <p class="fw-bold">35. The following graph represents which equation?</p>
                                 <div class="mb-3" style="text-align: center;">
-                                    <svg width="200" height="200" viewBox="0 0 200 200"
-                                        style="border: 1px solid #ccc; background: #f9f9f9;">
-                                        <!-- Axes -->
-                                        <line x1="20" y1="180" x2="180" y2="180" stroke="#333" stroke-width="2"
-                                            marker-end="url(#arrowhead3)" />
-                                        <line x1="20" y1="180" x2="20" y2="20" stroke="#333" stroke-width="2"
-                                            marker-end="url(#arrowhead3)" />
-                                        <!-- Arrow markers -->
-                                        <defs>
-                                            <marker id="arrowhead3" markerWidth="10" markerHeight="10" refX="9" refY="3"
-                                                orient="auto">
-                                                <polygon points="0 0, 10 3, 0 6" fill="#333" />
-                                            </marker>
-                                        </defs>
-                                        <!-- Labels -->
-                                        <text x="185" y="185" fill="#333" font-size="12">x</text>
-                                        <text x="15" y="15" fill="#333" font-size="12">y</text>
-                                        <text x="15" y="185" fill="#333" font-size="10">0</text>
-                                        <!-- Line: y = 2x + 1, showing x from 0 to 4, y from 0 to 9 -->
-                                        <!-- Points: (0,1), (1,3), (2,5), (3,7), (4,9) -->
-                                        <!-- SVG coords: x=0→20, x=4→180; y=0→180, y=9→20 -->
-                                        <!-- Calculated: (0,1)→(20,162), (1,3)→(60,127), (2,5)→(100,91), (3,7)→(140,56), (4,9)→(180,20) -->
-                                        <polyline points="20,162 60,127 100,91 140,56 180,20" stroke="#0066cc"
-                                            stroke-width="2" fill="none" />
-                                        <!-- Points -->
-                                        <circle cx="20" cy="162" r="3" fill="#0066cc" />
-                                        <circle cx="60" cy="127" r="3" fill="#0066cc" />
-                                        <circle cx="100" cy="91" r="3" fill="#0066cc" />
-                                        <circle cx="140" cy="56" r="3" fill="#0066cc" />
-                                        <circle cx="180" cy="20" r="3" fill="#0066cc" />
-                                    </svg>
+                                    <img src="assets/images/practice-35-graph.png" alt="Graph for question 35"
+                                        class="img-fluid" style="max-width: 50%; height: auto;">
                                 </div>
                                 <div class="form-check">
                                     <input class="form-check-input" type="radio" name="m35" id="m35a" value="A">
@@ -1904,6 +1875,11 @@
             m30: "We factor \\(7r^2 - 11rs - 6s^2\\) by finding binomials that expand to the original expression. Expanding \\((7r + 3s)(r - 2s)\\) gives \\(7r^2 - 14rs + 3rs - 6s^2 = 7r^2 - 11rs - 6s^2\\). Statement D is correct.",
             m31: "Using distribution: \\(3t(2t) + 3t(5u) - 4u(2t) - 4u(5u) = 6t^2 + 15tu - 8tu - 20u^2\\). Combining like terms gives \\(6t^2 + 7tu - 20u^2\\). Statement A is correct.",
             m32: "We factor \\(8v^2 - 14vw - 15w^2\\) by finding binomials whose expansion matches the expression. Expanding \\((4v + 3w)(2v - 5w)\\) gives \\(8v^2 - 20vw + 6vw - 15w^2 = 8v^2 - 14vw - 15w^2\\). Statement B is correct.",
+            m33: "The phrase \"4 times x minus 2, all divided by x\" means the entire expression \\(4x - 2\\) is divided by \\(x\\). This translates directly to \\(y = \\frac{4x - 2}{x}\\). Statement D correctly represents this wording.",
+            m34: "From the table, each time \\(x\\) increases by 1, \\(y\\) increases by 3, so the slope is 3. When \\(x = 0\\), \\(y = 5\\), which is the y-intercept. Therefore, the relationship is \\(y = 3x + 5\\). Statement A is correct.",
+            m35: "The graph is a straight line that crosses the y-axis at 1, so the y-intercept is 1. For every increase of 1 in \\(x\\), \\(y\\) increases by 2, giving a slope of 2. Therefore, the equation of the line is \\(y = 2x + 1\\). Statement C is correct.",
+            m36: "In the equation \\(y = 3x^2 - 7\\), the variable \\(x\\) is squared, then multiplied by 3, and finally 7 is subtracted. This is best described as \"y is 3 times x squared minus 7.\" Statement B is correct.",
+            m37: "The statement \"y is twice x plus 3\" represents the linear equation \\(y = 2x + 3\\). Linear equations graph as straight lines, and because the coefficient of \\(x\\) is positive, the line has a positive slope. Statement D is correct."
 
 
 
