about and contact page edits

--- a/contact.html
+++ b/contact.html
@@ -70,7 +70,9 @@
             <div class="row">
                 <div class="col-lg-8 mx-auto">
                     <h1 class="mb-4">Contact Me</h1>
-                    <p class="lead">Ace your test, have a question, found a bug, or want to request a feature? I'd love
+                    <p class="lead">Ace your test, have a question, found a bug, saw a type of question that wasn't
+                        covered on
+                        here, or want to request a feature? I'd love
                         to hear from
                         you!</p>
 
