--- a/about.html
+++ b/about.html
@@ -143,6 +143,11 @@
                             <p>Yes! All practice materials and resources on this site are completely free to use. There
                                 are no hidden fees, subscriptions, or paywalls. <strong> Donations are not required, but
                                     are greatly appreciated.</strong></p>
+                            <h6 class="mt-4">Where are these questions from?</h6>
+                            <p>I based these questions purely off of my memory of an aptitude test that I took. I used
+                                an LLM to generate some
+                                of the math questions and answers, as well as the reading passages. I'm confident that
+                                if you can perform well on these practice exams, you'll excel on the actual test. </p>
 
                             <h6 class="mt-4">What does a typical electrical apprenticeship aptitude test cover?</h6>
                             <p>The aptitude test typically includes two main sections: mathematics (algebra,
