--- a/explanations-math.html
+++ b/explanations-math.html
@@ -4,9 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Math Strategies - Electrical Aptitude Test Practice</title>
+    <title> Math Help - Electrical Aptitude Test Practice</title>
     <meta name="description"
         content="Study strategies and tips for the math section of the Electrical apprenticeship aptitude test.">
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/images/icon_32.png">
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -20,16 +23,17 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light bg-white">
         <div class="container">
-            <a class="navbar-brand" href="index.html">Electrical Aptitude Test Practice</a>
+            <a class="navbar-brand" href="index.html">
+                <img src="assets/images/icon_32.png" alt="Electrical Aptitude Test Prep" height="32" width="32"
+                    class="me-2">
+                Electrical Aptitude Test Prep
+            </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item">
-                        <a class="nav-link" href="index.html">Home</a>
-                    </li>
                     <li class="nav-item">
                         <a class="nav-link" href="full-practice_1.html">Exam 1</a>
                     </li>
@@ -43,13 +47,16 @@
                         <a class="nav-link" href="practice-reading.html">Reading Practice</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="explanations-math.html">Math Strategies</a>
+                        <a class="nav-link active" href="explanations-math.html"> Math Help</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="explanations-reading.html">Reading Strategies</a>
+                        <a class="nav-link" href="explanations-reading.html">Reading Tips</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="about.html">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="donate.html">Donate</a>
                     </li>
                 </ul>
             </div>
@@ -75,10 +82,11 @@
                             <ul>
                                 <li><strong>Algebra:</strong> Solving equations, working with variables, and
                                     manipulating expressions</li>
-                                <li><strong>Functions:</strong> Understanding function notation, graphs, and
+                                <li><strong>Functions and Graphs:</strong> Understanding function notation, graphs, and
                                     relationships</li>
                                 <li><strong>Number Series:</strong> Identifying patterns and sequences</li>
-                                <li><strong>Mathematical Reasoning:</strong> Problem-solving and logical thinking</li>
+                                <li><strong>Arithmetic and Mathematical Reasoning:</strong> Arithmetic and general
+                                    problem-solving skills</li>
                             </ul>
                         </div>
                     </div>
@@ -111,19 +119,44 @@
 
                             <h5>How to approach these problems</h5>
                             <ul>
-                                <li>Look for a pattern in the differences or ratios between adjacent numbers.</li>
-                                <li>Write out the differences / rations and look for a pattern in those. Writing them
-                                    out is the key to spotting patterns.</li>
+                                <li>I advise you to approach these problems in order of likelihood, the most likely
+                                    pattern is addition /
+                                    subtraction between adjacent numbers, so start there.</li>
+                                <li>Write out the differences / ratios between adjacent numbers and look for a pattern
+                                    in those. <strong>Actually writing it
+                                        out can help you see patterns.</strong> </li>
+                                <li>Addition and subtraction between adjacent
+                                    numbers is the most likely pattern you'll see. Start there.</li>
+                                <li> If addition and subtraction between the numbers does not yield a pattern, try
+                                    multiplication and division between numbers.
+                                <li>If multiplication and division fail to reveal a pattern, try taking the square root
+                                    or exponent of the numbers (one of the math practice problems uses square roots).
+                                </li>
+                                <li>If you're still stuck, try looking for a pattern in the numbers themselves. For
+                                    example, if the numbers are all prime, maybe it's the next prime number in the
+                                    sequence.</li>
                             </ul>
-                            <h5>Worked example</h5>
+                            <h5>Worked examples</h5>
                             <p class="mb-2"><strong>Try this pattern:</strong> What comes next in the sequence
                                 \(2,\,5,\,9,\,14,\,20,\,\ ?\)</p>
-                            <p class="text-muted"><em>Detailed explanation:</em> Compute first differences:
+                            <p class="text-muted"><em>Detailed explanation:</em> Compute differences between numbers:
                                 \(5-2=3,\ 9-5=4,\ 14-9=5,\ 20-14=6\). Writing out the differences, we get \(3, 4, 5, 6\)
                                 and the pattern is more clear.
                                 The differences increase by 1 each time, so the
                                 next difference should be \(7\). Add it to the last term: \(20 + 7 = 27\). So the next
                                 term is \(27\).</p>
+                            <p class="mb-2"><strong>Try this pattern:</strong> What comes next in the sequence
+                                \(3,\,5,\,2,\,6,\,1,\,\ ?\)</p>
+                            <p class="text-muted"><em>Detailed explanation:</em> Compute first differences:
+                                \(5-3=2,\ 2-5=-3,\ 6-2=4,\ 1-6=-5\). Writing out the differences, we get \(+2, -3, +4,
+                                -5\)
+                                and the pattern is more clear.
+                                The differences increase by 1 each time and alternate signs positive and negative, so
+                                the
+                                next difference should be \(+6\). Add it to the last term: \(1 + 6 = 7\). So the next
+                                term is \(7\). Alternatively, you could see the same pattern by seeing that every other
+                                number
+                                decreases by 1 (3, x ,2, y, 1) and the other numbers increase by 1 (5, m, 6, n, ?).</p>
                         </div>
                     </div>
 
@@ -140,7 +173,8 @@
                                     variable substitution. </li>
                                 <li>Make sure you understand are are confident with order of operations with numbers
                                     (practice problems 61-65).</li>
-                                <li>Write out the problem, substituting the values provided for the variables.</li>
+                                <li>Write out the problem on paper, substituting the values provided for the variables.
+                                </li>
                                 <li>Once it's written out, simplify one operation at a time in the correct order, just
                                     like an order of operations problem.</li>
                             </ul>
@@ -365,7 +399,7 @@
                             </ul>
                             <p class="mb-3 text-center">\[6r^2 - 9rs + 2rs - 3s^2 = 6r^2 - 7rs - 3s^2 \quad \checkmark\]
                             </p>
-                            <p class="mb-4 text-success"><strong>This matches! Choice A is correct.</strong></p>
+                            <p class="mb-4"><strong>This matches! Choice A is correct.</strong></p>
 
                             <p class="mb-2"><strong>Step 2: Verify other choices (for practice)</strong></p>
                             <p class="mb-2"><strong>Choice B:</strong> \((2r + 3s)(3r - s)\)</p>
@@ -553,7 +587,7 @@
                     <!-- Navigation -->
                     <div class="d-flex justify-content-between mb-4">
                         <a href="index.html" class="btn btn-outline-secondary">Back to Home</a>
-                        <a href="explanations-reading.html" class="btn btn-outline-primary">Reading Strategies</a>
+                        <a href="explanations-reading.html" class="btn btn-outline-primary">Reading Tips</a>
                     </div>
                 </div>
             </div>
@@ -565,11 +599,12 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
-                    <p class="mb-0">&copy; 2024 Electrical Aptitude Test Practice. Free educational resource.</p>
+                    <p class="mb-0">&copy; 2025 Electrical Aptitude Test Prep. Free educational resource</p>
                 </div>
                 <div class="col-md-6 text-md-end">
                     <a href="about.html" class="text-decoration-none me-3">About</a>
-                    <a href="about.html#donate" class="text-decoration-none">Support This Site</a>
+                    <a href="contact.html" class="text-decoration-none me-3">Contact</a>
+                    <a href="donate.html" class="text-decoration-none">Donate</a>
                 </div>
             </div>
         </div>
