--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <meta name="description"
         content="Free practice exams and study resources for the Electrical apprenticeship aptitude test. Practice math and reading comprehension questions.">
 
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/images/icon_32.png">
+
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Custom CSS -->
@@ -18,16 +21,17 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light bg-white">
         <div class="container">
-            <a class="navbar-brand" href="index.html">Electrical Aptitude Test Practice</a>
+            <a class="navbar-brand" href="index.html">
+                <img src="assets/images/icon_32.png" alt="Electrical Aptitude Test Prep" height="32" width="32"
+                    class="me-2">
+                Electrical Aptitude Test Prep
+            </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item">
-                        <a class="nav-link active" href="index.html">Home</a>
-                    </li>
                     <li class="nav-item">
                         <a class="nav-link" href="full-practice_1.html">Exam 1</a>
                     </li>
@@ -41,13 +45,19 @@
                         <a class="nav-link" href="practice-reading.html">Reading Practice</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="explanations-math.html">Math Strategies</a>
+                        <a class="nav-link" href="explanations-math.html"> Math Help</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="explanations-reading.html">Reading Strategies</a>
+                        <a class="nav-link" href="explanations-reading.html">Reading Tips</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="about.html">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="contact.html">Contact</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="donate.html">Donate</a>
                     </li>
                 </ul>
             </div>
@@ -62,7 +72,7 @@
                 <h1>Prepare for Your Electrical Aptitude Test</h1>
                 <p>Free practice exams and study resources to help you succeed on an electrical apprenticeship aptitude
                     test.
-                    Practice math and reading comprehension questions at your own pace.</p>
+                </p>
 
                 <div class="d-flex gap-3 justify-content-center flex-wrap">
                     <a href="full-practice_1.html" class="btn btn-primary btn-lg">Exam 1</a>
@@ -82,7 +92,7 @@
                             <p class="card-text">Take complete practice exams that simulate an electrical apprenticeship
                                 aptitude test
                                 experience. Test your knowledge across both math and reading sections.</p>
-                            <p> <strong>It is recommended to save Exam 2 for last.</strong> </p>
+                            <p> <strong>It is recommended to save Exam 2 for 1-2 days before your test.</strong> </p>
                             <div class="d-flex gap-2">
                                 <a href="full-practice_1.html" class="btn btn-primary">Exam 1</a>
                                 <a href="full-practice_2.html" class="btn btn-primary">Exam 2</a>
@@ -94,11 +104,13 @@
                     <div class="card h-100">
                         <div class="card-body">
                             <h5 class="card-title">Section-Specific Practice</h5>
-                            <p class="card-text">Focus on specific areas with dedicated math and reading comprehension
-                                practice questions. Build confidence in each section individually.</p>
+                            <p class="card-text">Want additional practice? Focus on specific areas with dedicated math
+                                sections, as well as additional reading comprehension
+                                questions. Build confidence in each section individually and get immediate feedback on
+                                your answers.</p>
                             <div class="d-flex gap-2">
-                                <a href="practice-math.html" class="btn btn-success">Math</a>
-                                <a href="practice-reading.html" class="btn btn-success">Reading</a>
+                                <a href="practice-math.html" class="btn btn-success">Math Practice</a>
+                                <a href="practice-reading.html" class="btn btn-success">Reading Practice</a>
                             </div>
                         </div>
                     </div>
@@ -107,10 +119,11 @@
                     <div class="card h-100">
                         <div class="card-body">
                             <h5 class="card-title">Study Strategies</h5>
-                            <p class="card-text">Learn effective strategies and tips for both math and reading sections.
+                            <p class="card-text">See a walkthrough and solving strategies for each type of math problem.
+                                Get tips for reading comprehension questions.
                                 Understand the test format and improve your approach.</p>
                             <div class="d-flex gap-2">
-                                <a href="explanations-math.html" class="btn btn-outline-primary">Math Tips</a>
+                                <a href="explanations-math.html" class="btn btn-outline-primary">Math Help</a>
                                 <a href="explanations-reading.html" class="btn btn-outline-primary">Reading Tips</a>
                             </div>
                         </div>
@@ -127,9 +140,11 @@
                             <h3 class="card-title">What to Expect</h3>
                             <p>An electrical apprenticeship aptitude test consists of two main sections:</p>
                             <ul>
-                                <li><strong>Math Section:</strong> 50 minutes of algebra, functions, number series, and
+                                <li><strong>Math Section:</strong> 45 minutes of algebra, functions, number series, and
                                     mathematical
-                                    reasoning</li>
+                                    reasoning. The math sections on this site are longer than the actual test, so they
+                                    use a 50
+                                    minute time limit.</li>
                                 <li><strong>Reading Comprehension:</strong> 50 minutes of understanding written passages
                                     and answering
                                     questions</li>
@@ -158,19 +173,55 @@
                         <div class="card-body">
                             <h3 class="card-title">How to Use This Site</h3>
                             <ol>
-                                <li><strong>Start with a full practice exam:</strong> Take Exam 1 and
-                                    mimic the test environment. Set a timer for 50 minutes for the math portion, then
-                                    take a 10-minute break, followed by 50 minutes for the reading portion.</li>
-                                <li><strong>Review and study:</strong> After completing the exam, review the
-                                    explanations and study the strategies on our Math Strategies and Reading Strategies
-                                    pages.</li>
-                                <li><strong>Practice sections separately:</strong> Use the Math Practice and Reading
-                                    Practice pages to focus on specific areas where you need improvement.</li>
-                                <li><strong>Take the second exam:</strong> Complete Exam 2 to measure your
-                                    progress and further prepare for test day.</li>
-                                <li><strong>Get extra practice and explanations:</strong> Use an LLM like Chat GPT or
+                                <li><strong>Start with a full practice exam:</strong> Take <a
+                                        href="full-practice_1.html">Exam 1</a> and
+                                    mimic the test environment. You will only be allowed to have scratch paper and a
+                                    pencil. Get those then set a timer for 50
+                                    minutes for the math portion. Note that there are no calculators allowed. Take a
+                                    10-minute break, then spend 50 minutes on the reading portion.</li>
+                                <li><strong>Review:</strong> After completing the exam, grade your answers and review
+                                    the
+                                    explanations for each problem.</li>
+                                <li><strong>Study:</strong> Go check out the <a href="explanations-math.html">Math Help
+                                        page</a> and make sure you understand
+                                    the strategies for solving each type of question. Look over the <a
+                                        href="explanations-reading.html">Reading Tips page</a> as
+                                    well.
+                                <li><strong>Practice sections separately:</strong> Use the <a
+                                        href="practice-math.html">Math Practice</a> and <a
+                                        href="practice-reading.html">Reading Practice</a>
+                                    pages to focus on specific areas where you need improvement in math, and get
+                                    additional practice in reading.</li>
+                                <li><strong>Get extra practice and explanations:</strong> If you still need to practice
+                                    more, I recommend that you use an LLM like Chat GPT or
                                     Claude to get extra practice questions and explanations.</li>
+                                <li><strong>Take the second exam:</strong> 1-2 days before your test, complete <a
+                                        href="full-practice_2.html">Exam 2</a> to measure your
+                                    progress and further prepare for test day.</li>
+
                             </ol>
+                        </div>
+                    </div>
+
+                    <!-- Donation Section -->
+                    <div class="card mb-4" id="donate">
+                        <div class="card-header bg-success text-white">
+                            <h5 class="mb-0">Support This Site</h5>
+                        </div>
+                        <div class="card-body">
+                            <p>This site is completely free and it costs a little bit of money to keep it that way. If
+                                you find it helpful and
+                                would like to support its maintenance and development, you can make a donation.</p>
+                            <p><strong>It only takes a minute!</strong></p>
+
+                            <div class="text-center mt-4">
+                                <script type="text/javascript"
+                                    src="https://cdnjs.buymeacoffee.com/1.0.0/button.prod.min.js" data-name="bmc-button"
+                                    data-slug="electricalaptitudeprep" data-color="#FFDD00" data-emoji="☕"
+                                    data-font="Cookie" data-text="Buy me a coffee" data-outline-color="#000000"
+                                    data-font-color="#000000" data-coffee-color="#ffffff"></script>
+                            </div>
+
                         </div>
                     </div>
                 </div>
@@ -183,11 +234,12 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
-                    <p class="mb-0">&copy; 2024 Electrical Aptitude Test Practice. Free educational resource.</p>
+                    <p class="mb-0">&copy; 2025 Electrical Aptitude Test Prep. Free educational resource</p>
                 </div>
                 <div class="col-md-6 text-md-end">
                     <a href="about.html" class="text-decoration-none me-3">About</a>
-                    <a href="about.html#donate" class="text-decoration-none">Support This Site</a>
+                    <a href="contact.html" class="text-decoration-none me-3">Contact</a>
+                    <a href="donate.html" class="text-decoration-none">Donate</a>
                 </div>
             </div>
         </div>
