Updates to math and reading explanations

--- a/explanations-reading.html
+++ b/explanations-reading.html
@@ -89,11 +89,13 @@
 
                     <!-- Strategy Sections -->
                     <div class="card mb-4">
-                        <div class="card-header">
+                        <div class="card-header bg-success text-white">
                             <h5 class="mb-0">General Reading Tips</h5>
                         </div>
                         <div class="card-body">
                             <ul>
+                                <li>Like everything else in life, practicing these types of problems will make them
+                                    easier.</li>
                                 <li>Read the passage. I sort of skim a little bit, making note of where things are so I
                                     can come back and answer specific questions. It's unlikely I will remember the
                                     answer
@@ -104,6 +106,8 @@
                                     easy to come back and answer specific questions.</li>
                                 <li>Pay attention to topic sentences and concluding statements</li>
                                 <li>Don't rely on prior knowledge - base answers only on the passage</li>
+                                <li>At the 1 minute remaining mark, I think it's best to start guessing and make sure
+                                    that every question is at least answered.</li>
                             </ul>
                         </div>
                     </div>
