--- a/explanations-math.html
+++ b/explanations-math.html
@@ -93,8 +93,8 @@
 
                     <!-- Strategy Sections -->
                     <div class="card mb-4">
-                        <div class="card-header">
-                            <h5 class="mb-0">General Test-Taking Strategies</h5>
+                        <div class="card-header bg-success text-white">
+                            <h5 class="mb-0">General Math Strategies</h5>
                         </div>
                         <div class="card-body">
                             <ul>
